[package]
name = "kuso-domains-redirector"
version = "0.1.0"
authors = ["Hidekazu Kobayashi <kobahide789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15"
async-std = { version = "1.8", features = ["attributes"] }
async-std-resolver = "0.19"
