[package]
name = "kuso-domains-redirector"
version = "0.1.0"
authors = ["Hidekazu Kobayashi <kobahide789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.15", default-features = false, features = ["h1-server", "logger"] }
async-std = { version = "1.8", features = ["attributes"] }
async-std-resolver = "0.20"
